# rust-guide-tutorial

./: Dockerfile  README.md  _config.yml  docker-compose.yml  index.md
.devcontainer/: devcontainer.json
.github/workflows/: examples.yml  jekyll.yml
_includes/: head_custom.html  mermaid_config.js  rust-version.html
_sass/custom/: custom.scss
appendices/: glossary.md  index.md  references.md  troubleshooting.md
appendices/ecosystem/: cargo.md  ci-cd.md  documentation.md  index.md  publishing.md  testing.md
appendices/libraries/: async-runtimes.md  cli.md  database.md  error-handling.md  index.md  logging.md  serialization.md  utilities.md  web-frameworks.md
examples/: README.md  TEMPLATE.md  build-all.sh  rust-toolchain.toml
examples/part1/hello-world/: Cargo.toml
examples/part1/hello-world/src/: main.rs
examples/part2/borrowing/: Cargo.toml
examples/part2/borrowing/src/: main.rs
examples/part2/enums/: Cargo.toml
examples/part2/enums/src/: main.rs
examples/part2/error-handling/: Cargo.toml
examples/part2/error-handling/src/: main.rs
examples/part2/functions/: Cargo.toml
examples/part2/functions/src/: main.rs
examples/part2/generics/: Cargo.toml
examples/part2/generics/src/: main.rs
examples/part2/lifetimes/: Cargo.toml
examples/part2/lifetimes/src/: main.rs
examples/part2/ownership/: Cargo.toml
examples/part2/ownership/src/: main.rs
examples/part2/structs/: Cargo.toml
examples/part2/structs/src/: main.rs
examples/part2/traits/: Cargo.toml
examples/part2/traits/src/: main.rs
examples/part2/variables-types/: Cargo.toml
examples/part2/variables-types/src/: main.rs
examples/part3/async-basics/: Cargo.toml
examples/part3/async-basics/src/: main.rs
examples/part3/channels/: Cargo.toml
examples/part3/channels/src/: main.rs
examples/part3/closures/: Cargo.toml
examples/part3/closures/src/: main.rs
examples/part3/collections/: Cargo.toml
examples/part3/collections/src/: main.rs
examples/part3/iterators/: Cargo.toml
examples/part3/mutex/: Cargo.toml
examples/part3/smart-pointers/: Cargo.toml
examples/part3/threads/: Cargo.toml
examples/part4/advanced-traits/: Cargo.toml
examples/part4/advanced-types/: Cargo.toml
examples/part4/ffi/: Cargo.toml
examples/part4/macros-declarative/: Cargo.toml
examples/part4/macros-procedural/: Cargo.toml
examples/part4/macros-procedural/src/: main.rs
examples/part4/memory-layout/: Cargo.toml
examples/part4/performance/: Cargo.toml
examples/part4/performance/src/: main.rs
examples/part4/unsafe-rust/: Cargo.toml
examples/part5/builder-pattern/: Cargo.toml
examples/part5/cli-apps/: Cargo.toml
examples/part5/database/: Cargo.toml
examples/part5/database/src/: main.rs
examples/part5/error-patterns/: Cargo.toml
examples/part5/logging/: Cargo.toml
examples/part5/logging/src/: main.rs
examples/part5/serialization/: Cargo.toml
examples/part5/serialization/src/: main.rs
examples/part5/state-machine/: Cargo.toml
examples/part5/testing-patterns/: Cargo.toml
examples/part5/web-services/: Cargo.toml
examples/part5/web-services/src/: main.rs
examples/part6/cross-compile/: Cargo.toml  README.md
examples/part6/cross-compile/src/: main.rs
examples/part6/drivers/: Cargo.toml  README.md
examples/part6/drivers/src/: main.rs
examples/part6/embedded-basics/: Cargo.toml
examples/part6/embedded-basics/src/: main.rs
examples/part6/embedded-hal/: Cargo.toml  README.md
examples/part6/embedded-hal/src/: main.rs
examples/part6/no-std/: Cargo.toml
examples/part6/no-std/src/: main.rs
examples/part6/real-time/: Cargo.toml  README.md
examples/part6/real-time/src/: main.rs
examples/part6/rtos-patterns/: Cargo.toml  README.md
examples/part6/rtos-patterns/src/: main.rs
examples/part7/uefi-filesystem/: Cargo.toml  README.md
examples/part7/uefi-filesystem/src/: main.rs
examples/part7/uefi-graphics/: Cargo.toml  README.md
examples/part7/uefi-graphics/src/: main.rs
examples/part7/uefi-hello/: Cargo.toml
examples/part7/uefi-hello/src/: main.rs
examples/part7/uefi-qemu/: Cargo.toml  README.md
examples/part7/uefi-qemu/esp/EFI/BOOT/: .gitkeep
examples/part7/uefi-qemu/scripts/: create-disk.sh  debug-qemu.sh  run-qemu.sh
examples/part7/uefi-qemu/src/: main.rs
examples/part8/async-concurrency/: Cargo.toml
examples/part8/bare-metal-runtime/: Cargo.toml
examples/part8/binary-optimization/: Cargo.toml
examples/part8/c-interop/: Cargo.toml
examples/part8/debugging/: Cargo.toml
examples/part8/embedded-software/: Cargo.toml
examples/part8/memory-management/: Cargo.toml
examples/part8/toolchain-setup/: Cargo.toml  README.md
part1/: 01-introduction.md  02-installation.md  03-ide-setup.md  04-alternative-editors.md  05-docker-setup.md  06-hello-world.md  07-cargo-basics.md  index.md
part2/: 01-variables-types.md  02-functions.md  03-ownership.md  04-borrowing.md  05-lifetimes.md  06-structs.md  07-enums.md  08-error-handling.md  09-traits.md  10-generics.md  index.md
part3/: 01-collections.md  02-iterators.md  03-closures.md  04-smart-pointers.md  05-threads.md  06-channels.md  07-mutex.md  08-async-basics.md  index.md
part4/: 01-unsafe.md  02-ffi.md  03-macros-declarative.md  04-macros-procedural.md  05-advanced-traits.md  06-advanced-types.md  07-performance.md  08-memory-layout.md  index.md
part5/: 01-builder-pattern.md  02-error-patterns.md  03-state-machine.md  04-cli-apps.md  05-web-services.md  06-database.md  07-serialization.md  08-testing-patterns.md  09-logging.md  index.md
part6/: 01-no-std.md  02-bare-metal.md  03-embedded-hal.md  04-kernel-modules.md  05-drivers.md  06-real-time.md  07-rtos.md  08-cross-compilation.md  index.md
part7/: 01-uefi-intro.md  02-uefi-setup.md  03-uefi-hello.md  04-boot-services.md  05-protocols.md  06-filesystem.md  07-graphics.md  08-variables.md  09-qemu-testing.md  index.md
part8/: 01-toolchain-setup.md  02-embedded-software.md  03-debugging.md  04-bare-metal-runtime.md  05-memory-management.md  06-c-interop.md  07-binary-optimization.md  08-async-concurrency.md  index.md
(+23 files in other folders)
