[package]
name = "serialization"
version = "0.1.0"
edition = "2021"
description = "Demonstrates serialization patterns with serde"
publish = false

[package.metadata]
tutorial-chapter = "part5/07-serialization"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
