[package]
name = "web-services"
version = "0.1.0"
edition = "2021"
description = "Demonstrates web service patterns with axum"
publish = false

[package.metadata]
tutorial-chapter = "part5/05-web-services"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
