[package]
name = "uefi-filesystem"
version = "0.1.0"
edition = "2021"
description = "Demonstrates UEFI file system access patterns"
publish = false

[package.metadata]
tutorial-chapter = "part7/06-filesystem"

# Note: This example demonstrates UEFI filesystem concepts
# in a std environment for learning purposes.
# Real UEFI apps require no_std and the uefi crate.

[dependencies]
